--- a/gradle.properties
+++ b/gradle.properties
@@ -1,10 +1,11 @@
 org.gradle.jvmargs=-Xmx4G
 org.gradle.parallel=true
 
-minecraft_version=1.21
+minecraft_version=1.21.1
+minecraft_version_major=1.21
 
 archives_base_name=fightorflight
-mod_version=0.6.2
+mod_version=0.7.0
 maven_group=me.rufia.fightorflight
 
 parchment=2024.11.10
@@ -12,13 +13,12 @@ parchment=2024.11.10
 fabric_loader_version=0.16.9
 fabric_api_version=0.107.0
 
+kff_version=uZAwdzAR
+
 #abandoned
 forge_version=47.2.1
 
-neoforge_version=21.1.77
-# Cobblemon-fabric-1.6.0b8390+1.21.1-HEAD-c75c5e4
+neoforge_version=21.1.90
 architectury_version=13.0.8
-#cobblemon_version=1.6.0+1.21.1
-cobblemon_version=1.6.0+1.21.1-HEAD-c75c5e4
-#NOT AVAILABLE NOW!!! PLEASE WAIT FOR THE RELEASE VERSION
+cobblemon_version=1.6.0+1.21.1
 cloth_config_version=15.0.140
