--- a/neoforge/src/main/resources/META-INF/neoforge.mods.toml
+++ b/neoforge/src/main/resources/META-INF/neoforge.mods.toml
@@ -1,5 +1,5 @@
 modLoader = "javafml"
-loaderVersion = "[21,)"
+loaderVersion = "[4,)"
 license = "MIT License"
 
 [[mods]]
@@ -13,21 +13,31 @@ Makes Cobblemon run away or fight back in response to a player attack or failed 
 
 [[dependencies.fightorflight]]
 modId = "minecraft"
-mandatory = true
+type = "required"
 versionRange = "[1.21.1]"
 ordering = "NONE"
 side = "BOTH"
 
 [[dependencies.fightorflight]]
 modId = "neoforge"
-mandatory = true
-versionRange = "[47,)"
+type = "required"
+versionRange = "[21.1,)"
 ordering = "NONE"
 side = "BOTH"
 
 [[dependencies.fightorflight]]
 modId = "cobblemon"
-mandatory = true
+type = "required"
 versionRange = "[1.6.0,)"
-ordering = "NONE"
+ordering = "AFTER"
 side = "BOTH"
+
+[[dependencies.fightorflight]]
+modId = "architectury"
+type = "required"
+versionRange = "[13.0.8,)"
+ordering = "AFTER"
+side = "BOTH"
+
+[[mixins]]
+config = "fightorflight.mixins_common.json"
