--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -1,6 +1,5 @@
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
-# I'm a Chinese, so I need to use a mirror to install the gradle,use https\://services.gradle.org/distributions/gradle-8.8-bin.zip if you don't need the mirror. -LyquidQrystal
-distributionUrl=https\://mirrors.cloud.tencent.com/gradle/gradle-8.8-all.zip
+distributionUrl=https\://services.gradle.org/distributions/gradle-8.8-bin.zip
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
